styles/krystofs-portfolio.webflow.scss
/* ... */
.main-hero {
  grid-column-gap: 35px;
  grid-row-gap: 35px;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  padding: 70px 0 0;
  display: flex;
}

.heading-h1 {
  text-align: left;
  white-space: normal;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
  font-family: Clashgrotesk, sans-serif;
  font-size: 50px;
  font-weight: 400;
  line-height: 50px;
  display: inline-block;
}

.heading-h1.other {
  white-space: normal;
  margin-bottom: 35px;
}

.heading-h1.center {
  text-align: center;
}

.heading-h1.center.jewelry {
  font-size: 90px;
}

.text-span-15 {
  color: var(--gray-0-08-opacity);
}

.main-hero-second {
  border: 1px #000;
  margin-top: 35px;
  margin-bottom: 70px;
  margin-left: calc(var(--default-space) * -1);
  margin-right: calc(var(--default-space) * -1);
  padding-bottom: 0;
}

.heading-3 {
  color: #ffffff8c;
  letter-spacing: 1px;
  -webkit-text-stroke-color: var(--grey-50o\<deleted\|variable-7c60eb65-1f30-3f25-bc93-a076d491fcb2\>);
  text-transform: none;
  margin-top: 0;
  margin-bottom: 0;
  font-family: Roobert, Arial, sans-serif;
  font-size: 22px;
  font-weight: 400;
  line-height: 22px;
}

.heading-3.grey {
  color: var(--gray-0-08-opacity);
}

.main-hero-logos {
  grid-column-gap: 5%;
  grid-row-gap: 5%;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 90px;
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
  position: static;
  inset: 0%;
  transform: scale(.9);
}

.main-hero-logos.space-bet {
  grid-column-gap: 5%;
  grid-row-gap: 5%;
  justify-content: space-between;
}

.main-hero-logos.cv {
  padding-left: 30px;
  padding-right: 30px;
}

.client-logo {
  opacity: .5;
  height: 20px;
  width: auto;
  display: block;
}

.client-logo.larger {
  height: 23px;
}

.client-logo.ultra {
  height: 28px;
}

.client-logo.slightly {
  height: 22px;
  margin-bottom: 2px;
}

.client-logo._26 {
  height: 26px;
}

.client-logo.orum {
  height: 20px;
  display: block;
}

.client-logo.voda {
  height: 33px;
}

.client-logo.barbout {
  height: 20px;
  margin-bottom: 2px;
  display: block;
}

.client-logo.themag {
  height: 32px;
  margin-bottom: 10px;
}

.client-logo.tiger {
  height: 26px;
}

.client-logo.badlod {
  height: 60px;
  margin-bottom: 5px;
}

.client-logo.fini {
  height: 30px;
}

.client-logo.anna {
  height: 34px;
}

.client-logo.anna.invert {
  opacity: 1;
}

.client-logo.jnt {
  height: 18px;
}

.client-logo.tiger {
  height: 42px;
  margin-bottom: 2px;
}

.client-logo.vsx {
  height: 28px;
}

.client-logo._26-copy {
  height: 24px;
}

.client-logo.invert {
  opacity: .7;
}

.main-projects {
  grid-column-gap: 25px;
  grid-row-gap: 25px;
  background-color: var(--transparentos\<deleted\|variable-35b3cee5-08dc-8d0e-d9aa-389e09fc7ba5\>);
  flex-flow: column;
  width: 100%;
  padding: 0;
  display: flex;
}

.main-proj-grid {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  width: 100%;
}

.proj-item {
  grid-column-gap: 3px;
  grid-row-gap: 3px;
  color: var(--white);
  flex-direction: column;
  padding: 0;
  text-decoration: none;
  display: flex;
  position: relative;
  overflow: hidden;
}

.proj-item.inverse {
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  display: flex;
}

.proj-item.inverse.anim {
  flex-flow: row;
}

.proj-item.hide {
  display: none;
  overflow: hidden;
}

.proj-img-wrap {
  border: 1px none var(--gray-0-08-opacity);
  border-radius: 0;
  margin-bottom: 0;
  padding-bottom: 65%;
  position: relative;
  overflow: hidden;
}

.proj-img-wrap.main {
  width: 100%;
  margin-bottom: 0;
  padding-bottom: 45%;
  display: block;
  position: relative;
}

.proj-img {
  border-radius: 0;
  position: absolute;
  inset: 0%;
  overflow: hidden;
}

.proj-img.relive {
  border-radius: var(--radius\<deleted\|variable-3f5cfe74-8124-2595-5b79-c0e4be705046\>);
  border-style: solid;
  border-color: #000;
}

.proj-img.wrap25 {
  border-radius: 0;
}

.proj-heading {
  margin-top: 0;
  margin-bottom: 0;
  font-family: Clashgrotesk, sans-serif;
  font-size: 30px;
  font-weight: 400;
  line-height: 30px;
  transform: translate(-40px);
  transition: transform 0.3s ease;
}

.proj-item:hover .proj-heading {
  transform: translate(0);
}

.proj-heading.nopos {
  font-size: 20px;
  line-height: 25px;
  transform: none;
}

.heading-4 {
  color: var(--white);
  margin-top: 0;
  margin-bottom: 0;
  font-family: Clashgrotesk, sans-serif;
  font-size: 30px;
  font-weight: 400;
  line-height: 35px;
}

.heading-4.lime {
  color: var(--lime\<deleted\|variable-c92cf5ed\>);
}

.label {
  color: var(--gray-050o);
  letter-spacing: 0;
  -webkit-text-stroke-color: #ffffffd9;
  text-transform: none;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-decoration: none;
  text-box-trim: both;
  text-box-edge: cap alphabetic;
}

.label.gray {
  color: var(--white);
  justify-content: flex-start;
  align-items: center;
  margin-top: 0;
  line-height: 20px;
  display: flex;
  position: static;
  inset: auto 0% 0%;
}

.label.gray.invert {
  color: var(--black50\<deleted\|variable-61b5a6be-6683-6e26-ed9e-86ce2701574d\>);
}

.label.gteen {
  color: var(--lime\<deleted\|variable-c92cf5ed\>);
}

.label.center {
  text-align: center;
}

.label.green {
  color: var(--green-new);
  -webkit-text-stroke-color: var(--green-new);
}

.label.green.small {
  font-size: 12px;
}

.label.credits {
  opacity: .6;
  text-transform: uppercase;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 20px;
}

.label.cv {
  font-size: 14px;
}

.label.cv.invert {
  color: var(--black50\<deleted\|variable-61b5a6be-6683-6e26-ed9e-86ce2701574d\>);
}

.label.mini {
  color: var(--black);
  letter-spacing: 0;
  text-transform: none;
  line-height: 18px;
}

.label.main {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.label.services {
  color: var(--white);
  font-size: 15px;
}

.label.white {
  color: var(--white);
}
/* ... */

